--- a/Food Delivery App/Food Delivery App/Modules/Cart/Cell/CartItemTableCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Cart/Cell/CartItemTableCell.xib
@@ -57,6 +57,9 @@
                         <buttonConfiguration key="configuration" style="plain" image="trash">
                             <color key="baseForegroundColor" name="primaryColor"/>
                         </buttonConfiguration>
+                        <connections>
+                            <action selector="buttonRemoveClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="SPP-qz-DgD"/>
+                        </connections>
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="N5x-BM-chO">
                         <rect key="frame" x="16" y="14" width="100" height="100"/>
@@ -101,7 +104,7 @@
         <image name="img-placeholder" width="96" height="96"/>
         <image name="trash" width="24" height="24"/>
         <namedColor name="cellLineColor">
-            <color red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.90200001001358032" green="0.90200001001358032" blue="0.90200001001358032" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryColor">
             <color red="0.91399997472763062" green="0.29399999976158142" blue="0.3919999897480011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
