--- a/Food Delivery App/Food Delivery App/Modules/Home/Cell/CategoryCell/CategoryItem/HomeCategoryItemCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Home/Cell/CategoryCell/CategoryItem/HomeCategoryItemCell.xib
@@ -18,9 +18,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="100" height="40"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="96w-Ks-MfK">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="96w-Ks-MfK">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="40"/>
-                        <color key="backgroundColor" name="primaryColor"/>
+                        <color key="backgroundColor" name="tertiaryColor"/>
                         <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" image="paperplane.circle" catalog="system" imagePlacement="leading" title="item" titleAlignment="leading">
@@ -52,8 +52,8 @@
     </objects>
     <resources>
         <image name="paperplane.circle" catalog="system" width="128" height="123"/>
-        <namedColor name="primaryColor">
-            <color red="0.91399997472763062" green="0.29399999976158142" blue="0.3919999897480011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="tertiaryColor">
+            <color red="0.9570000171661377" green="0.41200000047683716" blue="0.016000000759959221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
