--- a/Food Delivery App/Food Delivery App/Modules/Home/Cell/FoodCell/FoodItemCell/FoodItemCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Home/Cell/FoodCell/FoodItemCell/FoodItemCell.xib
@@ -6,12 +6,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Inter-Bold.ttf">
             <string>Inter-Bold</string>
+        </array>
+        <array key="Inter-Medium.ttf">
+            <string>Inter-Medium</string>
         </array>
     </customFonts>
     <objects>
@@ -24,54 +26,51 @@
                 <rect key="frame" x="0.0" y="0.0" width="154" height="253"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="InF-ud-apV" customClass="Gradient" customModule="Food_Delivery_App" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="154" height="126.66666666666667"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="startColor">
-                                <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="startLocation">
-                                <real key="value" value="0.0"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="endLocation">
-                                <real key="value" value="1"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W1p-P9-Dhi">
-                        <rect key="frame" x="0.0" y="0.0" width="154" height="126.66666666666667"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W1p-P9-Dhi">
+                        <rect key="frame" x="10" y="10" width="134" height="98"/>
+                        <color key="backgroundColor" name="gray10"/>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3d-Hh-E16">
-                        <rect key="frame" x="106" y="16" width="32" height="32"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="32" id="1Ev-u0-pnY"/>
-                            <constraint firstAttribute="width" constant="32" id="cI3-1z-7t6"/>
-                        </constraints>
-                        <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="favourite"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="16"/>
-                        </userDefinedRuntimeAttributes>
-                    </button>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="p6X-X6-jhf">
-                        <rect key="frame" x="16" y="142.66666666666666" width="122" height="97"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="p6X-X6-jhf">
+                        <rect key="frame" x="10" y="118" width="134" height="125"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7S-ll-pmo">
-                                <rect key="frame" x="0.0" y="0.0" width="122" height="18.333333333333332"/>
+                                <rect key="frame" x="0.0" y="0.0" width="134" height="18.333333333333332"/>
                                 <fontDescription key="fontDescription" name="Inter-Bold" family="Inter" pointSize="15"/>
                                 <color key="textColor" name="titleColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mPa-Ht-waI">
-                                <rect key="frame" x="0.0" y="34.333333333333343" width="122" height="14.666666666666664"/>
+                                <rect key="frame" x="0.0" y="28.333333333333346" width="134" height="14.666666666666668"/>
                                 <fontDescription key="fontDescription" name="Inter-Bold" family="Inter" pointSize="12"/>
                                 <color key="textColor" name="titleColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4ay-RD-7Oj">
+                                <rect key="frame" x="0.0" y="53" width="134" height="30"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7yu-U9-yai">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Vza-LB-Os7"/>
+                                            <constraint firstAttribute="width" constant="50" id="v7w-N8-2RE"/>
+                                        </constraints>
+                                        <color key="textColor" name="gray06"/>
+                                        <fontDescription key="fontDescription" name="Inter-Medium" family="Inter" pointSize="12"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minimumValue="1" maximumValue="500" translatesAutoresizingMaskIntoConstraints="NO" id="neh-ce-3rw">
+                                        <rect key="frame" x="60" y="0.0" width="74" height="30"/>
+                                        <connections>
+                                            <action selector="amountStepperChanged:" destination="gTV-IL-0wX" eventType="valueChanged" id="1fZ-Cm-nbD"/>
+                                        </connections>
+                                    </stepper>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="neh-ce-3rw" secondAttribute="trailing" id="pmN-kZ-6Wl"/>
+                                </constraints>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r7c-yx-A4d">
-                                <rect key="frame" x="0.0" y="65" width="122" height="32"/>
+                                <rect key="frame" x="0.0" y="93" width="134" height="32"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="32" id="SZZ-zC-cqm"/>
@@ -97,33 +96,49 @@
                             <constraint firstAttribute="trailing" secondItem="Z7S-ll-pmo" secondAttribute="trailing" id="2eo-gX-p73"/>
                             <constraint firstItem="mPa-Ht-waI" firstAttribute="leading" secondItem="p6X-X6-jhf" secondAttribute="leading" id="H8D-7t-Gs6"/>
                             <constraint firstItem="Z7S-ll-pmo" firstAttribute="leading" secondItem="p6X-X6-jhf" secondAttribute="leading" id="Jan-VB-fhZ"/>
-                            <constraint firstItem="r7c-yx-A4d" firstAttribute="leading" secondItem="p6X-X6-jhf" secondAttribute="leading" id="SUQ-aj-ADR"/>
+                            <constraint firstAttribute="trailing" secondItem="r7c-yx-A4d" secondAttribute="trailing" id="QZU-rl-gva"/>
+                            <constraint firstItem="r7c-yx-A4d" firstAttribute="leading" secondItem="p6X-X6-jhf" secondAttribute="leading" id="TJF-vV-MTd"/>
                             <constraint firstAttribute="trailing" secondItem="mPa-Ht-waI" secondAttribute="trailing" id="emJ-7J-bG7"/>
-                            <constraint firstAttribute="trailing" secondItem="r7c-yx-A4d" secondAttribute="trailing" id="umg-Xn-li3"/>
+                            <constraint firstAttribute="trailing" secondItem="4ay-RD-7Oj" secondAttribute="trailing" id="rfO-az-5oW"/>
                         </constraints>
                     </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3d-Hh-E16">
+                        <rect key="frame" x="102" y="20" width="32" height="32"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="32" id="1Ev-u0-pnY"/>
+                            <constraint firstAttribute="width" constant="32" id="cI3-1z-7t6"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" image="favourite"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="16"/>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="buttonFavoritesClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="vO6-M4-yTD"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Q3d-Hh-E16" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="0Ff-Tc-rM0"/>
-                <constraint firstAttribute="trailing" secondItem="p6X-X6-jhf" secondAttribute="trailing" constant="16" id="0iN-aD-jAf"/>
-                <constraint firstItem="p6X-X6-jhf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="2EB-Nv-e2B"/>
-                <constraint firstAttribute="trailing" secondItem="W1p-P9-Dhi" secondAttribute="trailing" id="AW8-qf-NvR"/>
-                <constraint firstAttribute="trailing" secondItem="Q3d-Hh-E16" secondAttribute="trailing" constant="16" id="BBq-q9-JjA"/>
-                <constraint firstItem="W1p-P9-Dhi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Baz-tf-dhP"/>
-                <constraint firstItem="p6X-X6-jhf" firstAttribute="top" secondItem="W1p-P9-Dhi" secondAttribute="bottom" constant="16" id="GH8-0W-Fef"/>
-                <constraint firstItem="W1p-P9-Dhi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Pfs-SH-cql"/>
-                <constraint firstItem="InF-ud-apV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="dLL-RR-LuN"/>
-                <constraint firstAttribute="trailing" secondItem="InF-ud-apV" secondAttribute="trailing" id="dYT-4r-vB6"/>
-                <constraint firstItem="InF-ud-apV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="dmU-Sx-hYz"/>
-                <constraint firstItem="InF-ud-apV" firstAttribute="bottom" secondItem="W1p-P9-Dhi" secondAttribute="bottom" id="j1S-OH-lMc"/>
-                <constraint firstItem="W1p-P9-Dhi" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.5" id="u1h-ZB-1UZ"/>
+                <constraint firstAttribute="trailing" secondItem="p6X-X6-jhf" secondAttribute="trailing" constant="10" id="0iN-aD-jAf"/>
+                <constraint firstAttribute="bottom" secondItem="p6X-X6-jhf" secondAttribute="bottom" constant="10" id="1PS-Ap-oby"/>
+                <constraint firstItem="p6X-X6-jhf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="2EB-Nv-e2B"/>
+                <constraint firstAttribute="trailing" secondItem="W1p-P9-Dhi" secondAttribute="trailing" constant="10" id="7hq-o9-W5u"/>
+                <constraint firstItem="Q3d-Hh-E16" firstAttribute="top" secondItem="W1p-P9-Dhi" secondAttribute="top" constant="10" id="NpL-Vs-mJA"/>
+                <constraint firstItem="W1p-P9-Dhi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Ycq-tY-mnd"/>
+                <constraint firstItem="p6X-X6-jhf" firstAttribute="top" secondItem="W1p-P9-Dhi" secondAttribute="bottom" constant="10" id="bj7-dg-Vpe"/>
+                <constraint firstItem="Q3d-Hh-E16" firstAttribute="trailing" secondItem="W1p-P9-Dhi" secondAttribute="trailing" constant="-10" id="dCL-l2-dEB"/>
+                <constraint firstItem="W1p-P9-Dhi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="o70-sV-wsT"/>
             </constraints>
             <size key="customSize" width="154" height="253"/>
             <connections>
+                <outlet property="amountStepper" destination="neh-ce-3rw" id="IgV-MG-grf"/>
+                <outlet property="amountTextField" destination="7yu-U9-yai" id="y1h-W9-iAX"/>
                 <outlet property="buttonAdd" destination="r7c-yx-A4d" id="Aqb-wM-dTb"/>
+                <outlet property="buttonFavorites" destination="Q3d-Hh-E16" id="3l5-CX-5WA"/>
                 <outlet property="foodImage" destination="W1p-P9-Dhi" id="7qn-NQ-slq"/>
                 <outlet property="priceLabel" destination="mPa-Ht-waI" id="V0w-Z0-AKc"/>
                 <outlet property="titleLabel" destination="Z7S-ll-pmo" id="1Lf-sg-Dnd"/>
@@ -133,14 +148,17 @@
     </objects>
     <resources>
         <image name="favourite" width="28" height="28"/>
+        <namedColor name="gray06">
+            <color red="0.47099998593330383" green="0.56499999761581421" blue="0.6119999885559082" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="gray10">
+            <color red="0.81199997663497925" green="0.84700000286102295" blue="0.86299997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryColor">
-            <color red="0.91399997472763062" green="0.29399999976158142" blue="0.3919999897480011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.016000000759959221" green="0.56099998950958252" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="titleColor">
             <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
