--- a/Food Delivery App/Food Delivery App/Modules/Profile/ProfileViewController.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Profile/ProfileViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -13,13 +13,16 @@
         <array key="Inter-Bold.ttf">
             <string>Inter-Bold</string>
         </array>
-        <array key="Inter-Regular.ttf">
-            <string>Inter-Regular</string>
+        <array key="Inter-Medium.ttf">
+            <string>Inter-Medium</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileViewController" customModule="Food_Delivery_App" customModuleProvider="target">
             <connections>
+                <outlet property="containerView" destination="fR3-me-DXb" id="qS8-nQ-BQN"/>
+                <outlet property="profileImage" destination="Qoo-4o-NY9" id="OmN-KG-pRu"/>
+                <outlet property="tableView" destination="XH0-4F-Veb" id="GRR-ve-2Df"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -28,13 +31,13 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slide002" translatesAutoresizingMaskIntoConstraints="NO" id="1N5-Am-iz7">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner" translatesAutoresizingMaskIntoConstraints="NO" id="1N5-Am-iz7">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="150"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="150" id="e1G-IY-yWj"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placeholder2" translatesAutoresizingMaskIntoConstraints="NO" id="Qoo-4o-NY9">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="Qoo-4o-NY9">
                     <rect key="frame" x="136.66666666666666" y="94" width="119.99999999999997" height="120"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="120" id="3ma-PO-eSQ"/>
@@ -44,46 +47,44 @@
                         <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="60"/>
                     </userDefinedRuntimeAttributes>
                 </imageView>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lt4-KG-PDd">
-                    <rect key="frame" x="148.66666666666666" y="230.00000000000003" width="96" height="58.333333333333343"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lt4-KG-PDd">
+                    <rect key="frame" x="149.33333333333334" y="230" width="94.666666666666657" height="51.333333333333314"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John DOE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Be9-QZ-uZ5">
-                            <rect key="frame" x="0.0" y="0.0" width="96" height="24.333333333333332"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jane DOE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Be9-QZ-uZ5">
+                            <rect key="frame" x="0.0" y="0.0" width="94.666666666666671" height="24.333333333333332"/>
                             <fontDescription key="fontDescription" name="Inter-Bold" family="Inter" pointSize="20"/>
                             <color key="textColor" name="gray01"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John DOE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIn-Ap-bCy">
-                            <rect key="frame" x="15" y="41.333333333333314" width="65.666666666666671" height="17"/>
-                            <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="14"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UX Designer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIn-Ap-bCy">
+                            <rect key="frame" x="5.6666666666666572" y="34.333333333333314" width="83.333333333333329" height="17"/>
+                            <fontDescription key="fontDescription" name="Inter-Medium" family="Inter" pointSize="14"/>
                             <color key="textColor" name="gray04"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fR3-me-DXb">
-                    <rect key="frame" x="16" y="318.33333333333326" width="361" height="499.66666666666674"/>
+                    <rect key="frame" x="16" y="311.33333333333326" width="361" height="506.66666666666674"/>
                     <subviews>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="XH0-4F-Veb">
-                            <rect key="frame" x="0.0" y="0.0" width="361" height="499.66666666666669"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="XH0-4F-Veb">
+                            <rect key="frame" x="8" y="0.0" width="353" height="506.66666666666669"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="XH0-4F-Veb" secondAttribute="trailing" id="14z-Z9-AvH"/>
                         <constraint firstAttribute="bottom" secondItem="XH0-4F-Veb" secondAttribute="bottom" id="bQy-Zt-hna"/>
-                        <constraint firstItem="XH0-4F-Veb" firstAttribute="leading" secondItem="fR3-me-DXb" secondAttribute="leading" id="wEB-Eg-tlB"/>
+                        <constraint firstItem="XH0-4F-Veb" firstAttribute="leading" secondItem="fR3-me-DXb" secondAttribute="leadingMargin" id="nJY-KT-8Rw"/>
                         <constraint firstItem="XH0-4F-Veb" firstAttribute="top" secondItem="fR3-me-DXb" secondAttribute="top" id="yH4-ag-Il7"/>
                     </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
-                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemGray6Color"/>
+            <color key="backgroundColor" name="gray10"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="fR3-me-DXb" secondAttribute="trailing" constant="16" id="0qq-x7-U2H"/>
                 <constraint firstItem="fR3-me-DXb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="9VH-YC-idc"/>
@@ -101,16 +102,19 @@
         </view>
     </objects>
     <resources>
-        <image name="img-placeholder2" width="96" height="96"/>
-        <image name="slide002" width="390" height="209"/>
+        <image name="banner" width="403" height="300"/>
+        <image name="profile" width="266" height="243"/>
         <namedColor name="gray01">
             <color red="0.14900000393390656" green="0.19599999487400055" blue="0.2199999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="gray04">
             <color red="0.32899999618530273" green="0.4309999942779541" blue="0.4779999852180481" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="gray10">
+            <color red="0.81199997663497925" green="0.84700000286102295" blue="0.86299997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
