--- a/Food Delivery App/Food Delivery App/Modules/Cart/Cell/ItemCell/CartItemTableCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Cart/Cell/ItemCell/CartItemTableCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -38,13 +38,31 @@
                                 <color key="textColor" name="titleColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l37-bA-MT6">
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="f1t-dj-MpH">
                                 <rect key="frame" x="0.0" y="33" width="212" height="16"/>
-                                <fontDescription key="fontDescription" name="Inter-Medium" family="Inter" pointSize="13"/>
-                                <color key="textColor" name="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l37-bA-MT6">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="16"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="AlS-ah-LRU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Inter-Medium" family="Inter" pointSize="13"/>
+                                        <color key="textColor" name="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6m-lM-dyh">
+                                        <rect key="frame" x="90" y="0.0" width="122" height="16"/>
+                                        <fontDescription key="fontDescription" name="Inter-Bold" family="Inter" pointSize="13"/>
+                                        <color key="textColor" name="tertiaryColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="f1t-dj-MpH" firstAttribute="top" secondItem="ZzI-D9-FMM" secondAttribute="bottom" constant="16" id="6dj-oV-2Vb"/>
+                            <constraint firstItem="f1t-dj-MpH" firstAttribute="leading" secondItem="leX-bb-jXK" secondAttribute="leading" id="ryM-4K-O3f"/>
+                        </constraints>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ad2-aq-wWE">
                         <rect key="frame" x="352" y="14" width="32" height="32"/>
@@ -63,6 +81,7 @@
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="N5x-BM-chO">
                         <rect key="frame" x="16" y="14" width="100" height="100"/>
+                        <color key="backgroundColor" name="gray10"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="100" id="dgv-Po-ioF"/>
                             <constraint firstAttribute="width" constant="100" id="ql3-c2-FOj"/>
@@ -77,6 +96,7 @@
                         <color key="backgroundColor" name="cellLineColor"/>
                     </view>
                 </subviews>
+                <color key="backgroundColor" name="backgroundColor"/>
                 <constraints>
                     <constraint firstItem="Ad2-aq-wWE" firstAttribute="leading" secondItem="leX-bb-jXK" secondAttribute="trailing" constant="16" id="2Cm-Je-gbQ"/>
                     <constraint firstItem="Ad2-aq-wWE" firstAttribute="top" secondItem="leX-bb-jXK" secondAttribute="top" id="WfM-bT-mwt"/>
@@ -95,6 +115,7 @@
             <connections>
                 <outlet property="cartDescription" destination="l37-bA-MT6" id="54r-xc-s5I"/>
                 <outlet property="cartImage" destination="N5x-BM-chO" id="YBv-hK-n4p"/>
+                <outlet property="cartQuantity" destination="p6m-lM-dyh" id="oPN-be-A7y"/>
                 <outlet property="cartTitle" destination="ZzI-D9-FMM" id="8F4-XA-yyo"/>
             </connections>
             <point key="canvasLocation" x="198.47328244274809" y="59.154929577464792"/>
@@ -103,11 +124,20 @@
     <resources>
         <image name="img-placeholder" width="96" height="96"/>
         <image name="trash" width="24" height="24"/>
+        <namedColor name="backgroundColor">
+            <color red="0.99999994039535522" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="cellLineColor">
             <color red="0.90200001001358032" green="0.90200001001358032" blue="0.90200001001358032" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="gray10">
+            <color red="0.81199997663497925" green="0.84700000286102295" blue="0.86299997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryColor">
             <color red="0.91399997472763062" green="0.29399999976158142" blue="0.3919999897480011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="tertiaryColor">
+            <color red="0.9570000171661377" green="0.41200000047683716" blue="0.016000000759959221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="textColor">
             <color red="0.62400001287460327" green="0.62400001287460327" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
