--- a/Food Delivery App/Food Delivery App/Modules/Detail/Cell/ImageCell/DetailItemImageViewCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Detail/Cell/ImageCell/DetailItemImageViewCell.xib
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="250" id="KGk-i7-Jjw" customClass="DetailItemImageViewCell" customModule="Food_Delivery_App" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="250" id="KGk-i7-Jjw" customClass="DetailItemImageViewCell" customModule="Food_Delivery_App" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="2fY-no-hMj">
-                        <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="2fY-no-hMj">
+                        <rect key="frame" x="16" y="16" width="218" height="218"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="12"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="2fY-no-hMj" secondAttribute="trailing" id="BIt-wS-pmh"/>
-                    <constraint firstAttribute="bottom" secondItem="2fY-no-hMj" secondAttribute="bottom" id="BQf-5f-aYL"/>
-                    <constraint firstItem="2fY-no-hMj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Mz6-eq-lfC"/>
-                    <constraint firstItem="2fY-no-hMj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SVe-K3-nGf"/>
+                    <constraint firstItem="2fY-no-hMj" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="4xW-4A-J8J"/>
+                    <constraint firstAttribute="trailing" secondItem="2fY-no-hMj" secondAttribute="trailing" constant="16" id="BIt-wS-pmh"/>
+                    <constraint firstItem="2fY-no-hMj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="SVe-K3-nGf"/>
+                    <constraint firstAttribute="bottom" secondItem="2fY-no-hMj" secondAttribute="bottom" constant="16" id="ayd-Qz-n5b"/>
+                    <constraint firstItem="2fY-no-hMj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="s9d-wq-0KB"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
