--- a/Food Delivery App/Food Delivery App/Modules/Home/Cell/CategoryCell/CategoryItem/HomeCategoryItemCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Home/Cell/CategoryCell/CategoryItem/HomeCategoryItemCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,10 +20,10 @@
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="96w-Ks-MfK">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="40"/>
-                        <color key="backgroundColor" name="tertiaryColor"/>
+                        <color key="backgroundColor" name="gray07"/>
                         <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="paperplane.circle" catalog="system" imagePlacement="leading" title="item" titleAlignment="leading">
+                        <buttonConfiguration key="configuration" style="plain" image="loupe" catalog="system" imagePlacement="leading" title="item" titleAlignment="leading">
                             <fontDescription key="titleFontDescription" name="Inter-Medium" family="Inter" pointSize="10"/>
                             <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </buttonConfiguration>
@@ -51,9 +51,9 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="paperplane.circle" catalog="system" width="128" height="123"/>
-        <namedColor name="tertiaryColor">
-            <color red="0.9570000171661377" green="0.41200000047683716" blue="0.016000000759959221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="loupe" catalog="system" width="128" height="113"/>
+        <namedColor name="gray07">
+            <color red="0.56499999761581421" green="0.64300000667572021" blue="0.68199998140335083" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
