--- a/Food Delivery App/Food Delivery App/Modules/MyFavorites/MyFavoritesViewController.xib
+++ b/Food Delivery App/Food Delivery App/Modules/MyFavorites/MyFavoritesViewController.xib
@@ -1,22 +1,63 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MyFavoritesViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MyFavoritesViewController" customModule="Food_Delivery_App" customModuleProvider="target">
             <connections>
+                <outlet property="favoriteTableView" destination="Svo-Nz-1rW" id="dKb-5X-cm6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Svo-Nz-1rW">
+                    <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                    <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
+                </tableView>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o4a-JL-Otl">
+                    <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="x32-Uc-aiW"/>
+                    </constraints>
+                    <items>
+                        <navigationItem title="My Favorites" id="hCq-Rs-8wb">
+                            <barButtonItem key="rightBarButtonItem" title="Item" image="close" style="done" id="DYB-tB-YzU">
+                                <connections>
+                                    <action selector="btnCloseClicked:" destination="-1" id="5zo-fr-UO9"/>
+                                </connections>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="backgroundColor"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="o4a-JL-Otl" secondAttribute="trailing" id="D0h-oo-H7L"/>
+                <constraint firstItem="o4a-JL-Otl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="JDK-an-XI4"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Svo-Nz-1rW" secondAttribute="trailing" id="QtI-s7-Zuq"/>
+                <constraint firstItem="o4a-JL-Otl" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Sf9-lE-azM"/>
+                <constraint firstItem="Svo-Nz-1rW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="d6p-v2-k9G"/>
+                <constraint firstItem="Svo-Nz-1rW" firstAttribute="top" secondItem="o4a-JL-Otl" secondAttribute="bottom" id="fe3-fH-ieP"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Svo-Nz-1rW" secondAttribute="bottom" id="g8A-ft-5QF"/>
+            </constraints>
+            <point key="canvasLocation" x="130.53435114503816" y="20.422535211267608"/>
         </view>
     </objects>
+    <resources>
+        <image name="close" width="32" height="32"/>
+        <namedColor name="backgroundColor">
+            <color red="0.99999994039535522" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
