--- a/Food Delivery App/Food Delivery App/Modules/Settings/Cell/SettingsDarkModeItemCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Settings/Cell/SettingsDarkModeItemCell.xib
@@ -33,7 +33,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dark Mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xFJ-hX-un4">
                         <rect key="frame" x="16" y="20.333333333333336" width="223" height="19.333333333333336"/>
                         <fontDescription key="fontDescription" name="Inter-Medium" family="Inter" pointSize="14"/>
-                        <color key="textColor" name="gray01"/>
+                        <color key="textColor" name="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tt1-7H-bte">
@@ -44,7 +44,7 @@
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" name="backgroundColor"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="iyB-Cx-Jnd" secondAttribute="trailing" constant="16" id="1Uu-gz-W8h"/>
                     <constraint firstItem="tt1-7H-bte" firstAttribute="trailing" secondItem="iyB-Cx-Jnd" secondAttribute="trailing" id="3DU-mH-RRI"/>
@@ -59,6 +59,7 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" name="backgroundColor"/>
             <connections>
                 <outlet property="darkModeSwitch" destination="iyB-Cx-Jnd" id="TGl-Bv-ktA"/>
                 <outlet property="titleLabel" destination="xFJ-hX-un4" id="3Ic-QU-Wci"/>
@@ -67,11 +68,14 @@
         </tableViewCell>
     </objects>
     <resources>
-        <namedColor name="gray01">
-            <color red="0.14900000393390656" green="0.19599999487400055" blue="0.2199999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="backgroundColor">
+            <color red="0.99999994039535522" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="success">
             <color red="0.13699999451637268" green="0.67500001192092896" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="textColor">
+            <color red="0.32941176470588235" green="0.43137254901960786" blue="0.47843137254901957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
